# yt_dl

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
src/yt_dl/: downloader.py  init.py
